[package]
name = "libtapo"
version = "0.1.0"
authors = ["Sylvain Garant <sylvain.garant@yandex.ru>"]
edition = "2021"

[lib]
crate-type = [ "cdylib" ]
name = "tapo"

[dependencies]
log = "0.4.16"
env_logger = "0.9.0"
serde = { version = "1.0.136", features = [ "derive" ] }
serde_json = "1.0.79"
base64 = "0.13.0"
hex = "0.4.3"
sha1_smol = "1.0.0"
openssl = "0.10.28"
uuid = { version = "0.8.2", features = [ "v4" ] }
ureq = { version = "2.4.0", features = [ "json" ] }
